@@ -4,6 +4,7 @@ Mantis ChangeLog
 
 - 0004137: [feature] Support a simple "view" URL (vboctor)
 - 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
+- 0004185: [customization] Support custom menu options (vboctor)
 - 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
 - 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
 - 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
@@ -20,6 +21,7 @@ Mantis ChangeLog
 - 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
 - 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
 - 0002220: [installation] usage of consistent naming schema for images (vboctor)
+- New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
 - Updated German and Brazilian Portuguese language.
 
 2004.07.20  -  0.19.0a2
